generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  SUPER_ADMIN
  ADMIN
  PROJECT_MANAGER
  COLLABORATOR
}

enum Status {
  TODO
  IN_PROGRESS
  COMPLETED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
}

model User {
  id                String           @id @default(uuid())
  name              String
  email             String           @unique
  password          String
  role              Role
  isActive          Boolean          @default(true)
  mustResetPassword Boolean          @default(true)
  resetCode         String?
  resetCodeExpiry   DateTime?
  resetCodeAttempts Int              @default(0)
  createdAt         DateTime         @default(now())
  updatedAt         DateTime         @updatedAt

  ownedProjects     Project[]        @relation("ProjectOwner")
  createdTasks      Task[]           @relation("TaskCreator")
  assignments       TaskAssignment[]
  comments          Comment[]        @relation("CommentAuthor")
  notifications     Notification[]

  // Enterprise additions
  projectMemberships ProjectMember[]
  activities        Activity[]
  auditLogs         AuditLog[]
  notificationSettings NotificationSettings?
  refreshTokens     RefreshToken[]
  uploadedAttachments Attachment[]     @relation("UploadedAttachments")

  @@index([email])
  @@index([role])
}

model Project {
  id          String   @id @default(uuid())
  name        String
  description String
  createdAt   DateTime @default(now())
  deletedAt   DateTime? // Soft delete

  ownerId     String
  owner       User     @relation("ProjectOwner", fields: [ownerId], references: [id], onDelete: Cascade)

  tasks       Task[]
  
  // Enterprise additions
  members     ProjectMember[]
  activities  Activity[]

  @@index([ownerId])
}

model ProjectMember {
  projectId String
  userId    String
  createdAt DateTime @default(now())

  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([projectId, userId])
  @@index([userId])
}

model Task {
  id          String           @id @default(uuid())
  title       String
  description String
  status      Status
  priority    Priority
  dueDate     DateTime
  startDate   DateTime?        // Enterprise: Start Date
  estimatedHours Float?        // Enterprise: Estimated Hours
  position    Int              @default(0) // Enterprise: Kanban Card position ordering
  deletedAt   DateTime?        // Enterprise: Soft delete
  completedAt DateTime?        // Task completion timestamp
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt

  projectId   String
  project     Project          @relation(fields: [projectId], references: [id], onDelete: Cascade)

  createdById String
  createdBy   User             @relation("TaskCreator", fields: [createdById], references: [id], onDelete: Cascade)

  assignments TaskAssignment[]
  comments    Comment[]
  
  // Enterprise additions
  labels      Label[]
  attachments Attachment[]

  @@index([projectId])
  @@index([createdById])
  @@index([status])
  @@index([priority])
  @@index([dueDate])
}

model TaskAssignment {
  taskId String
  userId String

  task   Task @relation(fields: [taskId], references: [id], onDelete: Cascade)
  user   User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([taskId, userId])
  @@index([userId])
}

model Comment {
  id        String   @id @default(uuid())
  body      String
  createdAt DateTime @default(now())

  taskId    String
  task      Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)

  authorId  String
  author    User     @relation("CommentAuthor", fields: [authorId], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@index([authorId])
}

model Notification {
  id        String   @id @default(uuid())
  type      String
  message   String
  isRead    Boolean  @default(false)
  isStarred Boolean  @default(false)
  createdAt DateTime @default(now())

  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  @@index([userId, isRead])
}

model Activity {
  id        String   @id @default(uuid())
  projectId String
  userId    String
  action    String
  createdAt DateTime @default(now())

  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([projectId])
  @@index([userId])
}

model AuditLog {
  id          String   @id @default(uuid())
  action      String
  performedBy String
  performer   User     @relation(fields: [performedBy], references: [id], onDelete: Cascade)
  targetId    String?
  metadata    Json?
  createdAt   DateTime @default(now())

  @@index([performedBy])
}

model Label {
  id        String   @id @default(uuid())
  name      String   @unique
  color     String   @default("blue")
  tasks     Task[]

  @@index([name])
}


model NotificationSettings {
  userId          String  @id
  user            User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  taskAssigned    Boolean @default(true)
  taskCompleted   Boolean @default(true)
  taskCommented   Boolean @default(true)
  projectUpdates  Boolean @default(true)
}

model RefreshToken {
  id         String    @id @default(uuid())
  userId     String
  tokenHash  String    @unique
  expiresAt  DateTime
  createdAt  DateTime  @default(now())
  revokedAt  DateTime?
  ipAddress  String?
  userAgent  String?

  user       User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([tokenHash])
}

model Attachment {
  id          String   @id @default(uuid())
  fileName    String
  bucketPath  String   @unique
  mimeType    String
  size        Int
  taskId      String
  uploadedBy  String
  createdAt   DateTime @default(now())

  task        Task     @relation(fields: [taskId], references: [id], onDelete: Cascade)
  uploader    User     @relation("UploadedAttachments", fields: [uploadedBy], references: [id], onDelete: Cascade)

  @@index([taskId])
  @@index([uploadedBy])
}
